# appd

./: .gitignore  Cargo.toml  readme.md
appd-core/: .env  Cargo.toml
appd-core/config/: appd.toml
appd-core/src/: config.rs  error.rs  lib.rs  miniapp.rs
webd/: Cargo.toml  build.rs
webd/config/: webd.toml
webd/src/: config.rs  lib.rs  main.rs
webd/src/api/: admin.rs  error.rs  logic.rs  mod.rs
webd/src/utils/: init.rs  mod.rs  server.rs
webd/tests/: utils.rs
