[package]
name = "appd-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib", 'staticlib', 'rlib']

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["http2"] }
log = "0.4.22"

once_cell = "1.20.2"
sea-orm = { version = "1.1.4", features = [
    "runtime-tokio",
    "sqlx-postgres",
    "sqlx-sqlite",
    "with-time",
    "with-chrono",
    "with-uuid",
    "mock",
    "macros",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

toml = "0.8.19"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"

utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = { version = "0.1.4" }
utoipa-scalar = { version = "0.2.1", features = ["axum"] }
