[package]
name = "webd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["http2"] }
clap = { version = "4.5.26", features = ["derive"] }
log = "0.4.22"
once_cell = "1.20.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
shadow-rs = "*"
toml = "0.8.19"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
appd-core = { path = "../appd-core" }
tokio = { version = "1.43.0", features = ["full"] }
num_cpus = "1.16.0"
sys-info = "0.9.1"
utoipa = { version = "5.3.1",features = ["axum_extras"] }
utoipa-axum = { version = "0.1.4" }
utoipa-scalar = { version = "0.2.1", features = ["axum"] }

[build-dependencies]
shadow-rs = "*"
